# zhihu-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  test_client.py
src/zhihu_mcp/: __init__.py  server.py  zhihu_client.py
