[project]
name = "zhihu-mcp"
version = "0.1.0"
description = "Zhihu MCP Server - Provides idea and article publishing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "playwright>=1.40.0",
]

[project.scripts]
zhihu-mcp = "zhihu_mcp.server:main"

[tool.uv]
package = true
